# study-wasm

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: action.yaml
01_first_world/: Cargo.toml  README.md  index.js  package.json  pnpm-lock.yaml  webpack.config.js
config/webpack/: webpack.base.ts
crates/01_first_world/: Cargo.toml
crates/01_first_world/src/: lib.rs
crates/02-console-log/: Cargo.toml
crates/02-console-log/src/: lib.rs
crates/03-without-a-bundler/: Cargo.toml  index.html
crates/03-without-a-bundler/src/: lib.rs
crates/04-synchronous-instantiation/: Cargo.toml  Worker.js  index.html
crates/04-synchronous-instantiation/src/: lib.rs
crates/05-import-js/: Cargo.toml  tt.js
crates/05-import-js/src/: lib.rs
crates/06-char/: Cargo.toml
crates/06-char/src/: lib.rs
crates/07-wasm-in-wasm/: Cargo.toml
crates/07-wasm-in-wasm/src/: lib.rs
crates/08-dom/: Cargo.toml
crates/08-dom/src/: lib.rs
crates/09-closures/: Cargo.toml
crates/09-closures/src/: lib.rs
crates/10-performance/: Cargo.toml
crates/10-performance/src/: lib.rs
crates/11-fetch/: Cargo.toml
crates/11-fetch/src/: lib.rs
